<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AgregarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="367dp"
            android:layout_height="400dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/dirr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/prompt_dirr"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/ncontador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/prompt_ncontador"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/prompt_valor"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/medida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/Medida"
                    android:layout_marginTop="25dp"/>

                <Button
                    android:id="@+id/btnAgregar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/boton_redondo"
                    android:text="@string/agg"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</RelativeLayout>